# spacebot-homelab-mcp

./: Cargo.toml  IMPLEMENTATION-GUIDE.md  README.md  SPACEBOT-UI-CONFIRMATION-INTEGRATION.md  example.config.toml  install.ps1  install.sh
.github/actions/install-openssl/: action.yml
.github/workflows/: ci.yml  release.yml
docs/research/: AUDIT-FINDINGS.md  IMPLEMENTATION-GUIDE.md  M1-Implementation.md  M10-Implementation-Report.md  M2-M5-Implementation.md  M6-Implementation-Report.md  M6-M10-Implementation.md  M7-Implementation-Report.md  M8-Implementation-Report.md  M9-Implementation-Report.md  NOTIFICATION-FEATURE.md  README-IMPLEMENTATION.md  WINDOWS-SUPPORT.md
docs/research/homelab-integration/: architecture-decision.md  channel-hallucination-bug.md  connection-manager.md  final-review.md  poc-specification.md  security-approach.md  use_case.md
docs/research/homelab-integration/research/: homelab-integration-2.md  homelab-integration-solution.md  peer-review.md  session-ses_2d35.md
skills/dns-filtering/: SKILL.md
skills/dns-filtering/references/: compose-example.md  network-integration.md
skills/docker-deploy/: SKILL.md
skills/docker-deploy/references/: compose-patterns.md  networking-guide.md  volume-strategies.md
skills/home-assistant/: SKILL.md
skills/home-assistant/references/: compose-example.md  integration-patterns.md
skills/media-stack/: SKILL.md
skills/media-stack/references/: arr-integration.md  compose-example.md
skills/nextcloud/: SKILL.md
skills/nextcloud/references/: compose-example.md  performance-tuning.md
skills/proxmox-admin/: SKILL.md
skills/proxmox-admin/references/: api-troubleshooting.md  backup-management.md  network-configuration.md  snapshot-management.md  storage-planning.md  vm-lifecycle.md
skills/tailscale-subnet-router/: SKILL.md
skills/tailscale-subnet-router/references/: client-debug.md  container-router-debug.md  lan-service-connectivity.md  troubleshooting-checklist.md
skills/vpn-access/: SKILL.md
skills/vpn-access/references/: tailscale-setup.md  wireguard-setup.md
src/: audit.rs  config.rs  confirmation.rs  connection.rs  health.rs  main.rs  mcp.rs  metrics.rs  notifications.rs  rate_limit.rs  setup.rs
src/tools/: docker.rs  docker_image.rs  mod.rs  proxmox.rs  ssh.rs  verify.rs
tests/: docker_integration.rs  mcp_e2e_test.py  mcp_server.rs  ssh_integration.rs
