[package]
name = "spacebot-homelab-mcp"
version = "0.2.2"
edition = "2024"
description = "MCP server providing Docker and SSH tools for managing homelab infrastructure via Spacebot"
license = "MIT"
repository = "https://github.com/Joshf225/spacebot-homelab-mcp"
homepage = "https://github.com/Joshf225/spacebot-homelab-mcp"
keywords = ["mcp", "spacebot", "docker", "ssh", "homelab"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[features]
default = ["notifications", "metrics"]
notifications = ["dep:notify-rust"]
metrics = ["dep:axum"]

[dependencies]
notify-rust = { version = "4", optional = true }
# MCP Protocol
rmcp = { version = "=1.1.1", features = ["server", "transport-io", "macros"] }
schemars = "1.2"
async-trait = "0.1"

# Docker
# NOTE: The `ssl` feature requires OpenSSL at compile time. On Windows CI,
# OpenSSL must be installed (e.g., via choco). A future option is switching
# to `rustls` to avoid the system dependency entirely.
bollard = { version = "0.17", features = ["ssl"] }

# SSH
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Concurrency
dashmap = "6"
parking_lot = "0.12"

# Metrics
prometheus = { version = "0.13", default-features = false }
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"], optional = true }

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["history"] }
console = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
futures = "0.3"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
# Integration tests will use testcontainers
# Adding after initial implementation

[[bin]]
name = "spacebot-homelab-mcp"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
